fix dark mode abstract

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -797,6 +797,10 @@ footer.sticky-bottom {
         border: none;
         background-color: #e8f4fd;
         color: #1a1a2e;
+
+        p, span, em, strong, a {
+          color: #1a1a2e;
+        }
       }
     }
   }
